@@ -25,6 +25,8 @@ makeRLearner.classif.mda = function() {
 #' @export
 trainLearner.classif.mda = function(.learner, .task, .subset, .weights = NULL,  ...) {
   f = getTaskFormula(.task)
+  #FIXME: we need to remove this, but I do not know why some functions are not found otherwise when we require the namespace
+  requirePackages("class", namespace.only = FALSE)
   mda::mda(f, data = getTaskData(.task, .subset), ...)
 }
 
